# sf-family-zoning-plan

./: .gitignore  CNAME  LICENSE  README.md  pyproject.toml
data/derived/: upzoning_by_district.csv
maps/: 3d_map.html
maps/data/: height_districts_web.geojson
scripts/: explore.py  fetch_planning_layers.py  make_3d_map.py  make_height_ladder.py  make_reference_buildings.py  parse_heights.py  q_corridors_and_heights.py  verify_and_map.py
