[project]
name = "fogline-zoning"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.7.0",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
]
